# Hbnb

./: .gitignore  .pdm-python  Dockerfile  Pipfile  README.md  START_DEVELOPMENT_SERVERS.sh  console.py  docker-compose.production.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  todo.md
api/v1/: app.py
config/: Hbnb  Hbnb.conf  dev_db.env  docker_entrypoint.sh  hbnb_api_gunicorn.conf.py  hbnb_frontend_gunicorn.conf.py  run_api_server.sh  run_frontend_server.sh  set_test_env.sh  setup_web_static.sh
data/: Hbnb_FileStorage.json  generate_categories.py
frontend/: AUTHORS  Dockerfile  app.py  console.py  fly.toml  hbnb.py  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/source/: categories.css  categories.tsx  filtersDialog.tsx  index.tsx  library.tsx  places.tsx  routes.tsx  search.css  search.tsx  styles.css  theme.tsx
frontend/templates/: 404.html  404.html.jinja  footer.html.jinja  hbnb.html  head.html.jinja  header.html.jinja  index.html.jinja  place.html  place.html.jinja
frontend/tests/: test_console.py
models/: __init__.py  amenity.py  base_model.py  category.py  city.py  place.py  review.py  state.py  user.py
models/engine/: db_storage.py  file_storage.py  storage_engine_base.py
tests/: test_console.py
tests/test_models/: test_amenity.py  test_base_model.py  test_city.py  test_place.py
to sort through/: better filters.css
to sort through/deploy/: 1-pack_web_static.py  2-do_deploy_web_static.py  3-deploy_web_static.py
web_dynamic/: 1-hbnb.py  2-hbnb.py  3-hbnb.py  4-hbnb.py
(+48 files in other folders)
