[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pep8",
    "pip-audit",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.8"
dependencies = [
    "flasgger",
    "flask",
    "flask-cors",
    "gunicorn",
    "jinja2",
    "sqlalchemy",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
